--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,12 +1,14 @@
-body {
-  width: 100%;
+/* html {
   height: 100%;
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
+} */
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
